k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-java-springboot
  name: sample-java-springboot
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: sample-java-springboot
