k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sample-java-springboot
  name: sample-java-springboot
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: sample-java-springboot
    weight: 100
